# q-space_invaders

./: .gitignore  CMakeLists.txt  README.md
policies/: space_invaders_q_table_1000_episodes_210_high_score.csv  space_invaders_q_table_2000_episodes_545_high_score.csv  space_invaders_q_table_2_x_1000_episodes_410_high_score.csv  space_invaders_q_table_3000_episodes_410_high_score.csv  space_invaders_q_table_3000_episodes_490_high_score.csv  space_invaders_q_table_3000_episodes_810_high_score.csv  space_invaders_q_table_3k_1_live_high_score_620.csv  space_invaders_q_table_3k_30e_870_high_score.csv  space_invaders_q_table_3k_high_score_640.csv  space_invaders_q_table_3k_high_score_685.csv  space_invaders_q_table_3k_high_score_765.csv  space_invaders_q_table_3k_reward_normal_die10_high_score_565.csv  space_invaders_q_table_3k_reward_normal_die10_high_score_670.csv
src/: main.cpp
